--- a/cpuff_forecast/index.html
+++ b/cpuff_forecast/index.html
@@ -89,7 +89,7 @@
     </div>
 
     <div id="SID3">
-    <img src="./example_gifs/wrf_gsn.png" width="300" height="300">
+    <!-- img src="./example_gifs/wrf_gsn.png" width="300" height="300" -->
     </div>
        
             <!-- //////////////////////////////////////////////// -->
